[package]
name = "raft-wal"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Minimal append-only WAL (Write-Ahead Log) optimized for Raft consensus"
keywords = ["raft", "wal", "write-ahead-log", "consensus", "log-storage"]
categories = ["database", "data-structures", "algorithms"]
repository = "https://github.com/NyxStudio-Labs/raft-wal"
readme = "README.md"

[features]
tokio = ["dep:tokio"]
openraft-storage = ["dep:openraft", "dep:serde", "dep:bincode", "tokio"]

[dependencies]
crc32c = "0.6"
tokio = { version = "1", features = ["fs", "io-util", "rt"], optional = true }
openraft = { version = "0.9", features = ["serde", "storage-v2"], optional = true }
serde = { version = "1", optional = true }
bincode = { version = "2", features = ["serde"], optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
redb = "3"
rocksdb = "0.24"
sled = "0.34"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }

[[bench]]
name = "wal"
harness = false

[[bench]]
name = "wal_async"
harness = false
required-features = ["tokio"]

[[bench]]
name = "comparison"
harness = false
