[package]
name = "raft-wal"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Minimal append-only WAL (Write-Ahead Log) optimized for Raft consensus"
keywords = ["raft", "wal", "write-ahead-log", "consensus", "log-storage"]
categories = ["database", "data-structures", "algorithms"]
repository = "https://github.com/NyxStudio-Labs/raft-wal"
readme = "README.md"

[features]
default = ["std"]
std = ["dep:crc32c"]
tokio = ["dep:tokio", "std"]
io-uring = ["dep:tokio-uring", "std"]
openraft-storage = ["dep:openraft", "dep:bitcode", "dep:serde", "tokio"]

[dependencies]
crc32c = { version = "0.6", optional = true }
tokio = { version = "1", features = ["fs", "io-util", "rt"], optional = true }
openraft = { version = "0.9", features = ["serde", "storage-v2"], optional = true }
bitcode = { version = "0.6", features = ["serde"], optional = true }
serde = { version = "1", optional = true }
tokio-uring = { version = "0.5", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
redb = "3"
rocksdb = "0.24"
sled = "0.34"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }

[[bench]]
name = "wal"
harness = false

[[bench]]
name = "wal_async"
harness = false
required-features = ["tokio"]

[[bench]]
name = "comparison"
harness = false
